--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,9 +1,9 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:TinkersConstruct:master-SNAPSHOT:dev")
+    compile("com.github.GTNewHorizons:TinkersConstruct:1.9.0.13-GTNH:dev")
 
-    compileOnly("com.github.GTNewHorizons:Battlegear2:master-SNAPSHOT:api") {
+    compileOnly("com.github.GTNewHorizons:Battlegear2:1.1.1.8:api") {
         transitive = false
     }
 }
